# morpha

./: Makefile.am  README.md  autogen.sh  configure.ac
data/: Makefile.am
doc/: Makefile.am
src/: Makefile.am  morpha.lex  morpha.yy.c
